@@ -4539,6 +4539,8 @@ STR_6229    :{WINDOW_COLOUR_2}{STRINGID}: {STRINGID}
 STR_6230    :{STRINGID}: {MOVE_X}{185}{STRINGID}
 STR_6231    :{WINDOW_COLOUR_2}{STRINGID}: {MOVE_X}{185}{STRINGID}
 STR_6232    :Frozen
+STR_6233    :Cut-away view
+STR_6234    :Highlight path issues
 
 #############
 # Scenarios #
