@@ -97,6 +97,8 @@ enum
     SHORTCUT_LOAD_GAME,
     SHORTCUT_CLEAR_SCENERY,
     SHORTCUT_GRIDLINES_DISPLAY_TOGGLE,
+    SHORTCUT_VIEW_CLIPPING,
+    SHORTCUT_HIGHLIGHT_PATH_ISSUES_TOGGLE,
 
     SHORTCUT_COUNT,
 
