@@ -153,6 +153,8 @@ const rct_string_id ShortcutStringIds[SHORTCUT_COUNT] = {
     STR_LOAD_GAME,
     STR_SHORTCUT_CLEAR_SCENERY,
     STR_SHORTCUT_GRIDLINES_DISPLAY_TOGGLE,
+    STR_SHORTCUT_VIEW_CLIPPING,
+    STR_SHORTCUT_HIGHLIGHT_PATH_ISSUES_TOGGLE,
 };
 
 
