@@ -3897,6 +3897,9 @@ enum {
 
     STR_FROZEN = 6232,
 
+    STR_SHORTCUT_VIEW_CLIPPING = 6233,
+    STR_SHORTCUT_HIGHLIGHT_PATH_ISSUES_TOGGLE = 6234,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     STR_COUNT = 32768
 };
